@@ -1,3 +1,9 @@
+2011-05-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug3299577.c:
+	  Fixed bug #3299577.
+
 2011-05-22 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* debugger/mcs51/simi.c: added #include <sys/file.h> for Solaris
